# nao_detector

./: CMakeLists.txt  nao_detector_algo.cpp  package.xml
data/: nao_chest.pcd  nao_head.pcd  nao_legs.pcd  object_templates.txt
launch/: nao_detector.launch  nao_mesh_description.launch
msg/: PointCloud2.msg  TransformationMatrix.msg
src/: kinect_simulator.cpp  nao_detector_algo.cpp  nao_detector_keypoints.cpp  nao_simulator.cpp  robot_point_model.cpp
urdf/: nao_h25_v32.urdf
